--- a/.github/workflows/v2-sca-scan.yml
+++ b/.github/workflows/v2-sca-scan.yml
@@ -15,12 +15,6 @@ on:
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
-    inputs:
-      branch_to_test:
-        description: "Branch or tag to run test"
-        required: true
-        default: main
-        type: string
 
 # Allow one concurrent deployment
 concurrency:
@@ -34,14 +28,6 @@ jobs:
     timeout-minutes: 40
 
     steps:
-
-    # - name: Checkout Code (Schedule)
-    #   if: github.event_name == 'schedule'
-    #   uses: actions/checkout@v4
-    #   with:
-    #       ref: v2.x
-    #       repository: aiverify-foundation/aiverify
-    #       submodules: recursive
 
     - name: Checkout Code
       uses: actions/checkout@v4
@@ -73,6 +59,16 @@ jobs:
           rm -rf .venv
           cd ${GITHUB_WORKSPACE}
 
+    - name: Install & Scan SHARED LIBRARY
+      run: |
+        cd aiverify-shared-library
+        rm package-lock.json
+        npm install --omit=dev --omit=optional
+        bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-shared-library --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="aiverify-shared-library_v2.x" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
+        mv aiverify_shared_library_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+        npm cache clean --force
+        cd ${GITHUB_WORKSPACE}
+
     - name: Install & Scan PORTAL
       run: |
         cd aiverify-portal
@@ -80,6 +76,7 @@ jobs:
         npm install --omit=dev --omit=optional
         bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-portal --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="aiverify-portal_v2.x" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
         mv aiverify_portal_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+        npm cache clean --force
         cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan TEST ENGINE
@@ -97,6 +94,25 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-test-engine --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="aiverify-test-engine_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv aiverify_test_engine_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
+
+    - name: Install & Scan TEST ENGINE WORKER
+      run: |
+          cd aiverify-test-engine-worker
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install .
+          pip freeze > requirements.txt
+          rm -rf .venv
+
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt
+          bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-test-engine-worker --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="aiverify-test-engine-worker_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
+          mv aiverify_test_engine_worker_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+          deactivate
+          rm -rf .venv
           cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Accumulated Local Effects
@@ -123,6 +139,7 @@ jobs:
           npm install
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=decorators --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="decorators_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv decorators_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+          npm cache clean --force
           cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Fairness Metric ToolBox For Classification
@@ -161,20 +178,19 @@ jobs:
           rm -rf .venv
           cd ${GITHUB_WORKSPACE}
 
-    # - name: Free up disk space
-    #   run: |
-    #     bash .ci/free_disk_space.sh
-    #     cd ${GITHUB_WORKSPACE}
-
     - name: Install & Scan Blur Corruptions
       run: |
           cd aiverify-test-engine
+          python3 -m venv .venv
           source .venv/bin/activate
+          pip install ".[all]"
+
           cd ${GITHUB_WORKSPACE}
           cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions
-          pip install -e .
+          pip install .
           pip freeze > requirements.txt
           deactivate
+          rm -rf .venv
 
           python3 -m venv .venv
           source .venv/bin/activate
@@ -185,61 +201,83 @@ jobs:
           rm -rf .venv
           cd ${GITHUB_WORKSPACE}
 
-    # - name: Install & Scan Digital Corruptions
-    #   run: |
-    #       cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -e .
-    #       pip freeze > requirements.txt
-    #       rm -rf .venv
+    - name: Install & Scan Digital Corruptions
+      run: |
+          cd aiverify-test-engine
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install ".[all]"
 
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -r requirements.txt
-    #       bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=digital-corruptions --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="digital-corruptions_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
-    #       mv digital_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
-    #       deactivate
+          cd ${GITHUB_WORKSPACE}
+          cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions
+          pip install .
+          pip freeze > requirements.txt
+          deactivate
+          rm -rf .venv
 
-    # - name: Install & Scan Environment Corruptions
-    #   run: |
-    #       cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -e .
-    #       pip freeze > requirements.txt
-    #       rm -rf .venv
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt
+          bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=digital-corruptions --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="digital-corruptions_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
+          mv digital_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+          deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
 
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -r requirements.txt
-    #       bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=environment-corruptions --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="environment-corruptions_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
-    #       mv environment_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
-    #       deactivate
+    - name: Install & Scan Environment Corruptions
+      run: |
+          cd aiverify-test-engine
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install ".[all]"
 
-    # - name: Install & Scan General Corruptions
-    #   run: |
-    #       cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -e .
-    #       pip freeze > requirements.txt
-    #       rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
+          cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions
+          pip install .
+          pip freeze > requirements.txt
+          deactivate
+          rm -rf .venv
 
-    #       python3 -m venv .venv
-    #       source .venv/bin/activate
-    #       pip install -r requirements.txt
-    #       bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=general-corruptions --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="general-corruptions_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
-    #       mv general_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
-    #       deactivate
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt
+          bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=environment-corruptions --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="environment-corruptions_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
+          mv environment_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+          deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
+
+    - name: Install & Scan General Corruptions
+      run: |
+          cd aiverify-test-engine
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install ".[all]"
+
+          cd ${GITHUB_WORKSPACE}
+          cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions
+          pip install .
+          pip freeze > requirements.txt
+          deactivate
+          rm -rf .venv
+
+          python3 -m venv .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt
+          bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=general-corruptions --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="general-corruptions_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
+          mv general_corruptions_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
+          deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Partial Dependence Plot
       run: |
           cd stock-plugins/aiverify.stock.partial-dependence-plot/algorithms/partial_dependence_plot
           python3 -m venv .venv
           source .venv/bin/activate
-          pip install -e .
+          pip install .
           pip freeze > requirements.txt
+          deactivate
           rm -rf .venv
 
           python3 -m venv .venv
@@ -248,6 +286,8 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=partial-dependence-plot --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="partial-dependence-plot_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv partial_dependence_plot_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Robustness ToolBox
       run: |
@@ -256,6 +296,7 @@ jobs:
           source .venv/bin/activate
           pip install -e .
           pip freeze > requirements.txt
+          deactivate
           rm -rf .venv
 
           python3 -m venv .venv
@@ -264,6 +305,8 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=robustness-toolbox --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="robustness-toolbox_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv robustness_toolbox_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan SHAP ToolBox
       run: |
@@ -272,6 +315,7 @@ jobs:
           source .venv/bin/activate
           pip install -e .
           pip freeze > requirements.txt
+          deactivate
           rm -rf .venv
 
           python3 -m venv .venv
@@ -280,6 +324,8 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=shap-toolbox --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="shap-toolbox_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv shap_toolbox_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
 
     - name: Install & Scan Veritas
       run: | 
@@ -288,6 +334,7 @@ jobs:
           source .venv/bin/activate
           pip install -e .
           pip freeze > requirements.txt
+          deactivate
           rm -rf .venv
 
           python3 -m venv .venv
@@ -296,6 +343,8 @@ jobs:
           bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=veritas --detect.project.version.name=v2.x --detect.source.path=. --detect.code.location.name="veritas_v2.x" --detect.excluded.directories=.venv,tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
           mv veritas_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
           deactivate
+          rm -rf .venv
+          cd ${GITHUB_WORKSPACE}
 
     # - name: Commit All Notices File
     #   env:
