--- a/.github/workflows/coverity-scan.yml
+++ b/.github/workflows/coverity-scan.yml
@@ -61,6 +61,20 @@ jobs:
         curl -fLsS --user $COV_USER:$COVERITY_PASSPHRASE $COV_URL/api/viewContents/issues/v1/High%20Impact%20Outstanding?projectId=$COVERITY_PROJECT > results.json
         if [ $(cat results.json | jq .viewContentsV1.totalRows) -ne 0 ]; then cat results.json | jq .viewContentsV1.rows; exit 1; fi
 
+    - name: Export Results to CSV
+      if: always()
+      run: |
+        curl -fLsS --header "Accept: text/csv" --user $COV_USER:$COVERITY_PASSPHRASE $COV_URL/api/viewContents/issues/v1/High%20Impact%20Outstanding?projectId=$COVERITY_PROJECT > coverity.csv
+        ls -la
+
+    - name: Download Coverity Excel Sheet
+      if: always()
+      uses: actions/upload-artifact@v4
+        with:
+          name: coverity-results-${{ github.run_id }}
+          path: |
+            ${{ github.workspace }}
+
     # - id: changeset
     #   name: Get Pull Request Changeset
     #   uses: jitterbit/get-changed-files@v1
