--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -15,7 +15,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.6",
+    "@next/mdx": "^15.2.3",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
@@ -26,13 +26,11 @@
     "@rjsf/utils": "^5.24.8",
     "@rjsf/validator-ajv8": "^5.24.8",
     "@tanstack/react-query": "^5.59.20",
-    "@types/ace": "^0.0.52",
     "@types/jsoneditor": "^9.9.5",
     "@types/mdx": "^2.0.13",
-    "ace": "^1.3.0",
     "ace-builds": "^1.36.4",
     "class-variance-authority": "^0.7.0",
-    "esbuild": "^0.24.2",
+    "esbuild": "^0.25.4",
     "exceljs": "^4.4.0",
     "fuse.js": "^7.0.0",
     "jsoneditor": "^10.1.1",
@@ -40,7 +38,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "mdx-bundler": "^10.0.3",
-    "next": "15.1.0",
+    "next": "15.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-error-boundary": "^5.0.0",
@@ -50,7 +48,7 @@
     "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vanilla-tilt": "^1.8.1",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -62,11 +60,14 @@
     "@types/react-grid-layout": "^1.3.5",
     "clsx": "^2.1.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "15.2.3",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "cross-spawn": "^7.0.5"
   }
 }
