upgraded dependecies in aiverify-shared-library

--- a/aiverify-shared-library/package.json
+++ b/aiverify-shared-library/package.json
@@ -64,5 +64,9 @@
         "./dist/types/charts/src/index.d.ts"
       ]
     }
+  },
+  "overrides": {
+    "@babel/runtime": "^7.26.10",
+    "serialize-javascript": "^6.0.2"
   }
 }
