--- a/.github/workflows/v2-pre-build-checks-test-engine-worker.yml
+++ b/.github/workflows/v2-pre-build-checks-test-engine-worker.yml
@@ -4,7 +4,7 @@
 # 3. Dependency analysis (vulnerabilities)
 # 4. Dependency analysis (copyleft licenses)
 
-name: v2 Pre-build Checks (Test Engine Worker)
+name: v2 Pre-build Checks (test-engine-worker)
 
 env:
   GH_TOKEN: ${{ github.token }}
