--- a/.github/workflows/v2-pre-build-checks-test-engine-worker.yml
+++ b/.github/workflows/v2-pre-build-checks-test-engine-worker.yml
@@ -37,7 +37,7 @@ concurrency:
 
 jobs:
 
-  init-pre-build-checks:
+  pre-build-checks:
     # Run only when PR is assigned, even on subsequent commits (i.e. synchronize)
     if: (github.event_name == 'pull_request' && github.event.pull_request.assignee != null) || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
     runs-on: ubuntu-latest    
@@ -95,9 +95,9 @@ jobs:
         run: |      
           set +e
           bash ${{ env.CI_DIR }}/run-test.sh src/aiverify_test_engine_worker -m
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh test aiverify_test_engine_worker
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh test src/aiverify_test_engine_worker
           test_status=$?
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh coverage aiverify_test_engine_worker
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh coverage src/aiverify_test_engine_worker
           coverage_status=$?
           echo "unit_test_status=$UNITTEST_SUMMARY" >> $GITHUB_OUTPUT
           echo "code_coverage_status=$COVERAGE_SUMMARY" >> $GITHUB_OUTPUT
@@ -116,7 +116,7 @@ jobs:
           set +e
           cp ${{ env.CI_DIR }}/.flake8 .
           bash ${{ env.CI_DIR }}/run-flake8.sh src/aiverify_test_engine_worker
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh lint aiverify_test_engine_worker
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh lint src/aiverify_test_engine_worker
           lint_status=$?
           echo "code_quality_status=$LINT_SUMMARY" >> $GITHUB_OUTPUT
           set -e
@@ -133,9 +133,9 @@ jobs:
         run: |
           set +e
           bash ${{ env.CI_DIR }}/run-pip-audit.sh src/aiverify_test_engine_worker
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh dependency aiverify_test_engine_worker
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh dependency src/aiverify_test_engine_worker
           dep_status=$?
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh license aiverify_test_engine_worker
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh license src/aiverify_test_engine_worker
           lic_status=$?
           echo "dependency_status=$DEPENDENCY_SUMMARY" >> $GITHUB_OUTPUT
           echo "license_status=$LICENSE_SUMMARY" >> $GITHUB_OUTPUT
