--- a/.github/workflows/v2-pre-build-checks-apigw.yml
+++ b/.github/workflows/v2-pre-build-checks-apigw.yml
@@ -1,10 +1,10 @@
-# Pre-build Checks (Test Engine Worker)
+# Pre-build Checks (API Gateway)
 # 1. Unit tests with code coverage (pytest)
 # 2. Code quality analysis (flake8)
 # 3. Dependency analysis (vulnerabilities)
 # 4. Dependency analysis (copyleft licenses)
 
-name: v2 Pre-build Checks (test-engine-worker)
+name: v2 Pre-build Checks (apigw)
 
 # env:
 #   GH_TOKEN: ${{ github.token }}
@@ -16,7 +16,8 @@ on:
     branches:
       - 'main'
     paths:
-      - 'aiverify-test-engine-worker/**'
+      - 'aiverify-apigw/**'
+      - 'aiverify-shared-library/**'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
@@ -57,7 +58,7 @@ jobs:
             echo "BRANCH_TO_TEST=${{ inputs.branch_to_test }}" >> $GITHUB_ENV
             echo "PR_NUM=#000" >> "$GITHUB_ENV"
           fi
-          echo "WDIR=aiverify-test-engine-worker" >> $GITHUB_ENV
+          echo "WDIR=aiverify-apigw" >> $GITHUB_ENV
           echo "CI_DIR=../.ci" >> $GITHUB_ENV
 
       - name: Checkout code
@@ -65,8 +66,9 @@ jobs:
         with:
           ref: ${{ env.BRANCH_TO_TEST }}
           sparse-checkout: |
+            aiverify-apigw
+            aiverify-shared-library
             aiverify-test-engine
-            aiverify-test-engine-worker
             .ci
 
       # Setup python    
@@ -76,12 +78,27 @@ jobs:
           python-version: "3.11"
           cache: 'pip'
 
+      - name: Setup Node.js 23
+        uses: actions/setup-node@v4
+        with:
+          node-version: '23'
+          cache: 'npm'
+
       # Install dependencies
       - name: Install dependencies
         working-directory: ${{ github.workspace }}/${{ env.WDIR }}
         run: |
           echo "Install dependencies"
-          pip install . > /dev/null
+          cd aiverify-shared-library
+          npm install
+          npm run build
+          cd ../aiverify-apigw/aiverify-apigw-node
+          npm install
+          npm link ../../aiverify-shared-library
+
+          cd ..
+          pip install -e ../aiverify-test-engine[all]
+          pip install -e .
           pip install pipdeptree > /dev/null
           pipdeptree -fl 
           pip install pytest pytest-mock pytest-html pytest-json pytest-cov coverage anybadge > /dev/null
@@ -94,10 +111,10 @@ jobs:
         if: ${{ ! cancelled() }}
         run: |      
           set +e
-          bash ${{ env.CI_DIR }}/run-test.sh src/aiverify_test_engine_worker -m
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh test src/aiverify_test_engine_worker
+          bash ${{ env.CI_DIR }}/run-test.sh apigw_apigw -m
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh test aiverify_apigw
           test_status=$?
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh coverage src/aiverify_test_engine_worker
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh coverage aiverify_apigw
           coverage_status=$?
           echo "unit_test_status=$UNITTEST_SUMMARY" >> $GITHUB_OUTPUT
           echo "code_coverage_status=$COVERAGE_SUMMARY" >> $GITHUB_OUTPUT
@@ -115,8 +132,8 @@ jobs:
         run: |
           set +e
           cp ${{ env.CI_DIR }}/.flake8 .
-          bash ${{ env.CI_DIR }}/run-flake8.sh src/aiverify_test_engine_worker
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh lint src/aiverify_test_engine_worker
+          bash ${{ env.CI_DIR }}/run-flake8.sh aiverify_apigw
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh lint aiverify_apigw
           lint_status=$?
           echo "code_quality_status=$LINT_SUMMARY" >> $GITHUB_OUTPUT
           set -e
@@ -132,10 +149,10 @@ jobs:
         working-directory: ${{ github.workspace }}/${{ env.WDIR }}
         run: |
           set +e
-          bash ${{ env.CI_DIR }}/run-pip-audit.sh src/aiverify_test_engine_worker
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh dependency src/aiverify_test_engine_worker
+          bash ${{ env.CI_DIR }}/run-pip-audit.sh aiverify_apigw
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh dependency aiverify_apigw
           dep_status=$?
-          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh license src/aiverify_test_engine_worker
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh license aiverify_apigw
           lic_status=$?
           echo "dependency_status=$DEPENDENCY_SUMMARY" >> $GITHUB_OUTPUT
           echo "license_status=$LICENSE_SUMMARY" >> $GITHUB_OUTPUT
