pre-build check workflow for apigw

--- a/.github/workflows/v2-pre-build-checks-apigw.yml
+++ b/.github/workflows/v2-pre-build-checks-apigw.yml
@@ -88,7 +88,7 @@ jobs:
         working-directory: ${{ github.workspace }}/${{ env.WDIR }}
         run: |
           echo "Install dependencies"
-          cd aiverify-shared-library
+          cd ../aiverify-shared-library
           npm install
           npm run build
           cd ../aiverify-apigw/aiverify-apigw-node
