pre-build check workflow for apigw

--- a/.github/workflows/v2-pre-build-checks-apigw.yml
+++ b/.github/workflows/v2-pre-build-checks-apigw.yml
@@ -69,6 +69,7 @@ jobs:
             aiverify-apigw
             aiverify-shared-library
             aiverify-test-engine
+            common
             .ci
 
       # Setup python    
