--- a/.github/workflows/v2-pre-build-checks-portal.yml
+++ b/.github/workflows/v2-pre-build-checks-portal.yml
@@ -89,7 +89,7 @@ jobs:
             npm install --omit=dev
             npx license-checker --summary --out licenses-found.txt -y
             npm install -D
-            npm i -D eslint-formatter-html jest prettier
+            npm i -D eslint-formatter-html
             npm link ../aiverify-shared-library
 
         # Compile typescript source files
@@ -148,15 +148,37 @@ jobs:
           working-directory: ${{ github.workspace }}/aiverify-portal
           run: |
             set +e
-            npm audit --omit=dev
-            exit_code_audit=$?         
-            npm audit --omit=dev --json | npx npm-audit-markdown --output npm-audit-report.md
-            npx markdown-to-html-cli --source npm-audit-report.md --output npm-audit-report.html -y
+            audit_json="audit.json"
+            npm audit --omit=dev --json > $audit_json
+            exit_code_audit=$?
+            
+            critical_count=$(jq '[.vulnerabilities[] | select(.severity=="critical")] | length' $audit_json)
+            high_count=$(jq '[.vulnerabilities[] | select(.severity=="high")] | length' $audit_json)
+            medium_count=$(jq '[.vulnerabilities[] | select(.severity=="moderate")] | length' $audit_json)
+            
+            echo "Vulnerability Summary:" > vuln-summary.txt
+            echo "Critical: $critical_count" >> vuln-summary.txt
+            echo "High: $high_count" >> vuln-summary.txt
+            echo "Medium: $medium_count" >> vuln-summary.txt
+            cat vuln-summary.txt
+
             echo -e "License Check Summary for portal\n" > license-report.txt
             cat licenses-found.txt >> license-report.txt
             echo -e "\nLicense Check Summary for shared-library\n" >> license-report.txt
-            cat ../ai-verify-shared-library/licenses-found.txt >> license-report.txt
+            cat ../aiverify-shared-library/licenses-found.txt >> license-report.txt
+
+            strong_copyleft_count=$(grep -iE 'GPL|AGPL|Affero|CeCILL' licenses-found.txt | wc -l)
+            weak_copyleft_count=$(grep -iE 'LGPL|MPL|CDDL' licenses-found.txt | wc -l)
+
+            echo -e "\nCopyleft License Summary:" >> license-report.txt
+            echo "Strong copyleft: $strong_copyleft_count" >> license-report.txt
+            echo "Weak copyleft: $weak_copyleft_count" >> license-report.txt
             cat license-report.txt
+
+            # Also append the vulnerability summary to license-report.txt
+            echo -e "\nVulnerability Summary:" >> license-report.txt
+            cat vuln-summary.txt >> license-report.txt
+
             cp license-report.txt licenses-found.txt
             set -e
             if [ $exit_code_audit -ne 0 ]; then
