--- a/.github/workflows/v2-pre-build-checks-portal.yml
+++ b/.github/workflows/v2-pre-build-checks-portal.yml
@@ -138,8 +138,8 @@ jobs:
             exit_code_lint=$?
             # npm run lint-html-report
             # npm run lint-json-report
-            npm run lint -f html -o eslint-report.html
-            npm run lint -f json -o eslint-report.json
+            npx next lint --format html > eslint-report.html
+            npx next lint --format json > eslint-report.json
 
             # ANSI color codes
             RED='\033[0;31m'
