pre-build check workflow for portal

--- a/.github/workflows/v2-pre-build-checks-portal.yml
+++ b/.github/workflows/v2-pre-build-checks-portal.yml
@@ -120,16 +120,24 @@ jobs:
             set +e
             sudo timedatectl set-timezone Asia/Singapore
             # npm run coverage
-            npx jest --silent
+            jest_output=$(npx jest --silent 2>&1)
+            echo "$jest_output"
+            if echo "$jest_output" | grep -q "No tests found"; then
+              total_tests=0
+              failed_tests=0
+              passed_tests=0
+            else
+              test_result=$(npx jest --json --silent)
+              total_tests=$(echo "$test_result" | jq '.numTotalTests // 0')
+              failed_tests=$(echo "$test_result" | jq '.numFailedTests // 0')
+              passed_tests=$(echo "$test_result" | jq '.numPassedTests // 0')
+            fi
             exit_code_jest=$?
             # ANSI color codes
             RED='\033[0;31m'
+            ORANGE='\033[0;33m'
             GREEN='\033[0;32m'
             RESET='\033[0m'
-            test_result=$(npx jest --json --silent)
-            total_tests=$(echo "$test_result" | jq '.numTotalTests // 0')
-            failed_tests=$(echo "$test_result" | jq '.numFailedTests // 0')
-            passed_tests=$(echo "$test_result" | jq '.numPassedTests // 0')
             echo "########### Unit Test Summary ###########"
             if [ "$total_tests" -eq 0 ] || [ "$passed_tests" -eq 0 ] || [ "$failed_tests" -ne 0 ]; then
               COLOR=$RED
@@ -142,10 +150,20 @@ jobs:
             echo "#########################################"
             if [ -f coverage/coverage-summary.json ]; then
               coverage_pct=$(jq '.total.lines.pct' coverage/coverage-summary.json)
-              echo "########### Code Coverage Summary ###########"
-              echo "Line Coverage: $coverage_pct%"
-              echo "#############################################"
+            else
+              coverage_pct=0
             fi
+            # Set coverage color based on percentage
+            if (( $(echo "$coverage_pct < 50" | bc -l) )); then
+              COVERAGE_COLOR=$RED
+            elif (( $(echo "$coverage_pct < 70" | bc -l) )); then
+              COVERAGE_COLOR=$ORANGE
+            else
+              COVERAGE_COLOR=$GREEN
+            fi
+            echo "########### Code Coverage Summary ###########"
+            printf "${COVERAGE_COLOR}Line Coverage: %s%%%s\n" "$coverage_pct" "$RESET"
+            echo "#############################################"
             set -e
             if [ $exit_code_jest -ne 0 ]; then
               echo "jest failed, exiting..."
@@ -209,7 +227,7 @@ jobs:
               .vulnerabilities | to_entries[] |
               .key as $pkg |
               .value.via[]? | select(type == "object" and .title != null) |
-              "\($pkg) - \(.severity): \(.title)\(if .via? | has(\"source\") then \" (via: \(.via.source))\" else \"\" end)"' $audit_json
+              "\($pkg) - \(.severity): \(.title)\(if has(\"source\") then \" (via: \(.source))\" else \"\" end)"' $audit_json
             echo "############################################"
 
             # ANSI color codes
